Fixed color contrast ration of texts on issues page

--- a/src/styles/issues.scss
+++ b/src/styles/issues.scss
@@ -50,7 +50,7 @@
         width: 1px;
       }
       span {
-        color: #9b9b9b;
+        color: #575757;
         font-size: 0.8em;
         font-weight: 500;
         letter-spacing: 0.3px;
@@ -75,7 +75,7 @@
       letter-spacing: 0.3px;
       line-height: 16px;
       code {
-        color: #9b9b9b;
+        color: #595959;
         font-size: 0.9em;
         letter-spacing: 0.3px;
       }
